Update to fix user input progress bar alignment.

--- a/assets/sass/components/user-input/googlesitekit-user-input-questions.scss
+++ b/assets/sass/components/user-input/googlesitekit-user-input-questions.scss
@@ -118,7 +118,6 @@
 
 	.googlesitekit-user-input__question--progress {
 		margin: 0 auto;
-		max-width: calc(100% - #{$grid-gap-phone * 2});
 		max-width: calc(100% - #{$grid-gap-desktop * 2});
 	}
 }
